--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,23 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# --- MobSF project safety ---
+*.apk
+*.ipa
+*.appx
+*.zip
+*.jks
+*.keystore
+*.pem
+*.key
+.env
+.env.*
+__pycache__/
+.DS_Store
+output/
+outputs/
+reports/
+mobsf_data/
+uploads/
+downloads/
